# pgpow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
pgpow/: cli.py
src/pgpow/: cli.py  explain.py
tests/: test_explain.py  test_pgpow.py
