[project]
name = "pgpow"
version = "0.1"
description = "A command line toolkit for working with PostgreSQL."
readme = "README.md"
authors = [{name = "Rob Young"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: SQL",
    "Topic :: Database",
]
dependencies = [
    "click",
    "rich>=14.1.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/robyoung/pgpow"
Changelog = "https://github.com/robyoung/pgpow/releases"
Issues = "https://github.com/robyoung/pgpow/issues"
CI = "https://github.com/robyoung/pgpow/actions"

[project.scripts]
pgpow = "pgpow.cli:cli"

[project.optional-dependencies]
test = ["pytest"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.14.1",
    "pytest",
    "types-click>=7.1.8",
    "ruff",
    "ipdb"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # isort
    "I",
    # typechecking
    "TC"
]
